fixed the scrollbar placement
fixed the scrollbar placement

--- a/common/css.css
+++ b/common/css.css
@@ -19,7 +19,7 @@ li {list-style: none;}
 
 a {cursor: pointer;}
 
-label {width:100%; padding-bottom:2rem; border-bottom: 2px solid;  cursor: pointer;}
+label {width:100%; padding-bottom:2rem; cursor: pointer;}
 
 iframe { border:0; width:100%; height: 100%;}
 
@@ -44,7 +44,7 @@ section {
 }
 
 section .scroll {
-    position: absolute;top: 0px;bottom: 0px;left: 0px;right: -10px;overflow-y: auto;}
+    position: absolute;top: 0px;bottom: 0px;left: 0px;right: -9px; padding-right: 9px; overflow-y: auto;}
 
 #info {
     min-width: 80vw;
@@ -66,8 +66,8 @@ section .scroll {
     height:100vh;
     top:0;
     left:0;
-    max-width: 90vw;
-    height: -webkit-fill-available;
+    padding:0;
+    margin:0;
 }
 
 .goback {
